@@ -14,8 +14,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <!-- Nom de la classe principale -->
         <project.main.classname>${project.groupId}.${project.artifactId}.fr.ul.miage.choquert.td5mongodb.Main</project.main.classname>
+        <project.bindist.dir>${project.basedir}/bindist</project.bindist.dir>
+        <project.main.classname>${project.groupId}.${project.artifactId}.Launcher</project.main.classname>
+        <project.bin.appname>run</project.bin.appname>
     </properties>
 
     <dependencies>
@@ -24,6 +26,119 @@
             <artifactId>mongodb-driver-sync</artifactId>
             <version>4.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>13</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>13</version>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <release>11</release>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.4</version>
+                <configuration>
+                    <mainClass>${project.main.classname}</mainClass>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <!-- create bat scripts for apps -->
+                <!-- mvn package | appassembler:assemble -->
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>appassembler-maven-plugin</artifactId>
+                <version>1.10</version>
+                <executions>
+                    <execution>
+                        <id>win</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>assemble</goal>
+                        </goals>
+                        <configuration>
+                            <assembleDirectory>${project.bindist.dir}</assembleDirectory>
+                            <repositoryLayout>flat</repositoryLayout>
+                            <extraJvmArguments>--module-path %JAVAFX_HOME%/lib --add-modules javafx.controls,javafx.fxml</extraJvmArguments>
+                            <programs>
+                                <program>
+                                    <platforms>
+                                        <platform>windows</platform>
+                                    </platforms>
+                                    <mainClass>${project.main.classname}</mainClass>
+                                    <id>${project.bin.appname}</id>
+                                </program>
+                            </programs>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>unix</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>assemble</goal>
+                        </goals>
+                        <configuration>
+                            <assembleDirectory>${project.bindist.dir}</assembleDirectory>
+                            <repositoryLayout>flat</repositoryLayout>
+                            <extraJvmArguments>--module-path $JAVAFX_HOME/lib --add-modules javafx.controls,javafx.fxml</extraJvmArguments>
+                            <programs>
+                                <program>
+                                    <platforms>
+                                        <platform>unix</platform>
+                                    </platforms>
+                                    <mainClass>${project.main.classname}</mainClass>
+                                    <id>${project.bin.appname}</id>
+                                </program>
+                            </programs>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- Plugin qui crée l'archive zip contenant la distribution source dans le dossier target -->
+            <!-- NB : ce plugin utilise un fichier annexe : zip.xml                                    -->
+            <!-- ===================================================================================== -->
+            <plugin>
+                <!-- create a distribution archive -->
+                <!-- mvn install ou assembly:single -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>make-zip</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <descriptors>
+                                <descriptor>zip.xml</descriptor>
+                            </descriptors>
+                            <appendAssemblyId>true</appendAssemblyId>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+
+
+    </build>
+
 
 </project>
